--- a/package.json
+++ b/package.json
@@ -42,5 +42,8 @@
     "socket.io": "^1.7.2",
     "webpack": "^1.14.0",
     "webpack-stream": "^3.2.0"
+  },
+  "engines": {
+    "node": "^7.9.0"
   }
 }
